# cgen

./: .gitignore  CMakeLists.txt  README.md
src/: cppclitemplate.h  main.cpp  template.h
template/: CMakeLists.txt  conanfile.txt  {{CMakeLists.txt}}
template/c++/cli/: conanfile.txt
template/c++/lib/: {{CMakeLists.txt}}
template/src/: main.cpp
toolchain/c++/lib/compile/: Dockerfile  build.sh
